kubernetes_yaml/booktest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: booktest
  name: booktest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: booktest
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/esd-g10t4-scenario1: "true"
        io.kompose.service: booktest
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: bookingURL
              value: http://booking:5000/
            - name: notificationURL
              value: http://notification:5008/
            - name: patientURL
              value: http://patient:5051/
          image: booktest
          name: booktest
          ports:
            - containerPort: 5055
          resources: {}
      restartPolicy: Always
status: {}
