kubernetes_yaml/drug-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: drug
  name: drug
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: drug
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/esd-g10t4-scenario2: "true"
        io.kompose.service: drug
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: dbURL
              value: mysql+mysqlconnector://root@host.docker.internal:3306/inventory
          image: drug
          name: drug
          ports:
            - containerPort: 5002
          resources: {}
      restartPolicy: Always
status: {}
