kubernetes_yaml/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: inventory
  name: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: inventory
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/esd-g10t4-scenario3: "true"
        io.kompose.service: inventory
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: dbURL
              value: mysql+mysqlconnector://root@host.docker.internal:3306/inventory
          image: inventory
          name: inventory
          ports:
            - containerPort: 5211
          resources: {}
      restartPolicy: Always
status: {}
