kubernetes_yaml/patient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: patient
  name: patient
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: patient
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/esd-g10t4-scenario1: "true"
        io.kompose.network/esd-g10t4-scenario2: "true"
        io.kompose.network/esd-g10t4-scenario3: "true"
        io.kompose.service: patient
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: dbURL
              value: mysql+mysqlconnector://root@host.docker.internal:3306/patient_records
          image: patient
          name: patient
          ports:
            - containerPort: 5051
          resources: {}
      restartPolicy: Always
status: {}
