kubernetes_yaml/dispense_restock-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: dispense-restock
  name: dispense_restock
spec:
  ports:
    - name: "5204"
      port: 5204
      targetPort: 5204
  selector:
    io.kompose.service: dispense-restock
status:
  loadBalancer: {}
