kubernetes_yaml/get_appointments-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: get-appointments
  name: get_appointments
spec:
  ports:
    - name: "5010"
      port: 5010
      targetPort: 5010
  selector:
    io.kompose.service: get-appointments
status:
  loadBalancer: {}
