kubernetes_yaml/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: inventory
  name: inventory
spec:
  ports:
    - name: "5211"
      port: 5211
      targetPort: 5211
  selector:
    io.kompose.service: inventory
status:
  loadBalancer: {}
