kubernetes_yaml/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: notification
  name: notification
spec:
  ports:
    - name: "5008"
      port: 5008
      targetPort: 5008
  selector:
    io.kompose.service: notification
status:
  loadBalancer: {}
