kubernetes_yaml/prescribe-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: prescribe
  name: prescribe
spec:
  ports:
    - name: "5101"
      port: 5101
      targetPort: 5101
  selector:
    io.kompose.service: prescribe
status:
  loadBalancer: {}
