kubernetes_yaml/esd-g10t4-scenario2-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: esd-g10t4-scenario2
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/esd-g10t4-scenario2: "true"
  podSelector:
    matchLabels:
      io.kompose.network/esd-g10t4-scenario2: "true"
